--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mycontacts-backend-api",
+  "name": "feedback-back",
   "version": "1.0.0",
-  "description": "Node, express and mongoDB project",
+  "description": "Feedback Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,6 +11,7 @@
   "author": "pooja garva",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
